--- a/Makefiles/exercice/Makefile
+++ b/Makefiles/exercice/Makefile
@@ -1,24 +1,27 @@
 CC = arm-none-eabi-gcc
 
-EXE=hello
-OBJS = main.o t1.o t2.o stubs.ogit com
+EXE = hello
+OBJS = main.o t1.o t2.o stubs.o
+LOADLIBES = -L/opt/mylibs
+CFLAGS = -Wall -Werror -g -O2 -mthumb
+LDLIBS = -lm
 
 all:$(EXE)
 
 $(EXE) : $(OBJS)
-	$(CC) -L/opt/mylibs -mthumb main.o t1.o stubs.o t2.o -lm -o $@
+	$(LINK.o) $(LOADLIBES) -mthumb $^ $(LDLIBS) -o $@
 
 stubs.o : libs/stubs.c
 	$(CC) -g -O2 -mthumb -c -o $@ $^
 
-t2.o : t2.c
-	$(CC) -Wall -Werror -g -O2 -mthumb -c -o $@ $^
+#t2.o : t2.c
+#	$(CC) $(CFLAGS) -c -o $@ $^
 
-t1.o : t1.c
-	$(CC) -Wall -Werror -g -O2 -mthumb -c -o $@ $^
+#t1.o : t1.c
+#	$(CC) $(CFLAGS) -c -o $@ $^
 
-main.o : main.c
-	$(CC) -Wall -Werror -g -O2 -mthumb -c -o $@ $^
+#main.o : main.c
+#	$(CC) $(CFLAGS) -c -o $@ $^
 
 
 clean : 		
